==> Wang-shuange/gitdemo/Hermes test for rsm/STM32_DHCP/STM32F10X_HD/Src/sensor/Ethernet/W5500/w5500_conf.c <==
#include <stdio.h>
#include <string.h>
#include "bsp_iwdg.h"
#include "w5500_conf.h"
#include "bsp_spi_flash.h"
#include "delay.h"
#include "w5500.h"
#include "dhcp.h"
#include "bsp_TiMbase.h"
#include "bsp_led.h"

void gpio_for_w5500_config(void)
{
	GPIO_InitTypeDef GPIO_InitStructure;
	SPI_FLASH_Init();																			 /*初始化STM32 SPI1接口*/
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOC|RCC_APB2Periph_GPIOG, ENABLE);
	/*定义RESET引脚*/	
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_15;						 /*选择要控制的GPIO引脚*/		 
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;		 /*设置引脚速率为50MHz*/		
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;		 /*设置引脚模式为通用推挽输出*/		
	GPIO_Init(GPIOE, &GPIO_InitStructure);							 /*调用库函数，初始化GPIO*/
	GPIO_SetBits(GPIOE, GPIO_Pin_15);		
	/*定义INT引脚*/	
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_14;						 /*选择要控制的GPIO引脚*/		 
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;		 /*设置引脚速率为50MHz */		
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IPU;				 /*设置引脚模式为通用推挽模拟上拉输入*/	
	GPIO_Init(GPIOE, &GPIO_InitStructure);							 /*调用库函数，初始化GPIO*/
}

void wiz_cs(uint8_t val)
{
	if (val == LOW) 
	{
		GPIO_ResetBits(GPIOA, WIZ_SCS); 
	}
	else if (val == HIGH)
	{
		GPIO_SetBits(GPIOA, WIZ_SCS); 
	}
}

void reset_w5500(void)
{
	#ifdef STM32F103VET6
		GPIO_ResetBits(GPIOE, WIZ_RESET);
		delay_us(2);  
		GPIO_SetBits(GPIOE, WIZ_RESET);
		delay_ms(1600);	
	#endif
}
