==> wdsll/stm32f407_Eth_Fsmc/PublicDrivers/W5500/w5500_conf.c <==
#include <stdio.h>
#include <string.h>
#include "w5500_conf.h"
#include "utility.h"
#include "w5500.h"
#include "dhcp.h"
#include "spi.h"

void reset_w5500(void)
{
//  GPIO_ResetBits(WIZ_RESET_PORT, WIZ_RESET);
//  delay_ms(10);
//  GPIO_SetBits(WIZ_RESET_PORT, WIZ_RESET);
//  delay_ms(1600);


	HAL_GPIO_WritePin(WIZ_RESET_PORT,WIZ_RESET,GPIO_PIN_RESET);
	HAL_Delay(10);
	HAL_GPIO_WritePin(WIZ_RESET_PORT,WIZ_RESET,GPIO_PIN_SET);
	HAL_Delay(1600);
}

void gpio_for_w5500_config(void)
{
  GPIO_InitTypeDef GPIO_InitStruct;

  __HAL_RCC_SPI1_CLK_ENABLE() ;
  WIZ_SPI_GPIO_ClK_ENABLE();
  WIZ_SPIx_SCS_CLK_ENABLE();
	WIZ_INT_CLK_ENABLE();
  WIZ_RESET_CLK_ENABLE();

  GPIO_InitStruct.Pin = WIZ_SPIx_SCLK_PIN|WIZ_SPIx_MOSI_PIN;
  GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
  GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;
  HAL_GPIO_Init(WIZ_SPIx_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.Pin = WIZ_SPIx_MISO_PIN;
  GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
  GPIO_InitStruct.Pull = GPIO_NOPULL;
  HAL_GPIO_Init(WIZ_SPIx_GPIO_PORT, &GPIO_InitStruct);

  HAL_GPIO_WritePin(WIZ_SPIx_SCS_PORT, WIZ_SPIx_SCS_PIN, GPIO_PIN_SET);
  GPIO_InitStruct.Pin = WIZ_SPIx_SCS_PIN;
  GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
  HAL_GPIO_Init(WIZ_SPIx_SCS_PORT, &GPIO_InitStruct);

  /* Disable the Serial Wire Jtag Debug Port SWJ-DP */
//  __HAL_AFIO_REMAP_SWJ_DISABLE();

  hspi1.Instance = WIZ_SPIx;
  hspi1.Init.Mode = SPI_MODE_MASTER;
  hspi1.Init.Direction = SPI_DIRECTION_2LINES;
  hspi1.Init.DataSize = SPI_DATASIZE_8BIT;
  hspi1.Init.CLKPolarity = SPI_POLARITY_HIGH;
  hspi1.Init.CLKPhase = SPI_PHASE_2EDGE;
  hspi1.Init.NSS = SPI_NSS_SOFT;
  hspi1.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_4;
  hspi1.Init.FirstBit = SPI_FIRSTBIT_MSB;
  hspi1.Init.TIMode = SPI_TIMODE_DISABLE;
  hspi1.Init.CRCCalculation = SPI_CRCCALCULATION_DISABLE;
  hspi1.Init.CRCPolynomial = 7;
  HAL_SPI_Init(&hspi1);

  /*定义INT引脚*/
  GPIO_InitStruct.Pin = WIZ_INT_PIN;
  GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
  GPIO_InitStruct.Pull = GPIO_PULLUP;
  HAL_GPIO_Init(WIZ_SPIx_SCS_PORT, &GPIO_InitStruct);

  /*定义RESET引脚*/
  HAL_GPIO_WritePin(WIZ_RESET_PORT, WIZ_RESET_PIN, GPIO_PIN_SET);
  GPIO_InitStruct.Pin = WIZ_RESET_PIN;
  GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
  HAL_GPIO_Init(WIZ_RESET_PORT, &GPIO_InitStruct);
}

void wiz_cs(u8 val)
{
	if (val == LOW)
	{
//	  GPIO_ResetBits(WIZ_SPIx_SCS_PORT, WIZ_SPIx_SCS);
		HAL_GPIO_WritePin(WIZ_SPIx_SCS_PORT,WIZ_SPIx_SCS,GPIO_PIN_RESET);
	}
	else if (val == HIGH)
	{
//	  GPIO_SetBits(WIZ_SPIx_SCS_PORT, WIZ_SPIx_SCS);
		HAL_GPIO_WritePin(WIZ_SPIx_SCS_PORT,WIZ_SPIx_SCS,GPIO_PIN_SET);
	}
}
